# dsql-rust-first-look

./: .gitignore  Cargo.toml  cdk.json  package-lock.json  package.json
infra/lib/: sample-stack.ts
lambdas/insert/: Cargo.toml
lambdas/insert/src/: main.rs
lambdas/select/: Cargo.toml
lambdas/select/.sqlx/: query-3c7313d587c729262198e25744df12a8044913c63396bb6181f7f7c76e24680b.json
lambdas/select/src/: main.rs
